# app/ui/openapi.json
@@ -502,6 +502,21 @@
        }
       }
      },
+     "400": {
+      "description": "错误",
+      "content": {
+       "application/json": {
+        "schema": {
+         "properties": {
+          "detail": {
+           "type": "string"
+          }
+         },
+         "type": "object"
+        }
+       }
+      }
+     },
      "422": {
       "description": "Validation Error",
       "content": {
@@ -744,9 +759,13 @@
    },
    "OpenPairIn": {
     "properties": {
-     "local_path": {
+     "local_dir": {
       "type": "string",
-      "title": "Local Path"
+      "title": "Local Dir"
+     },
+     "subdir": {
+      "type": "string",
+      "title": "Subdir"
      },
      "performer_id": {
       "type": "string",
@@ -755,7 +774,8 @@
     },
     "type": "object",
     "required": [
-     "local_path",
+     "local_dir",
+     "subdir",
      "performer_id"
     ],
     "title": "OpenPairIn"
